@@ -1,3 +1,9 @@
+2004-11-25  Richard Henderson  <rth@redhat.com>
+
+	PR c++/6764
+	* reload1.c (set_initial_eh_label_offset): New.
+	(set_initial_label_offsets): Use it.
+
 2004-11-26  Alan Modra  <amodra@bigpond.net.au>
 
 	PR rtl-optimization/16356
